# trabajocomputacionparalela

./: 1.3.0  V 1.4  v1.01  v1.2  versión final
PalDrive/: CMakeLists.txt  Pasos  mi_programa
Trabajo/: CMakeList.txt  Makefile  Makefile.win  README.txt  codigo.txt  main.cpp
